syntax = "proto3";

package service;

import "message/power.proto";

// PowerService definition
service PowerService{
    rpc Add(message.Power) returns (message.Power);
    rpc GetPower(message.PowerRequest) returns (stream message.Power);
    rpc GetAvgConsumption(message.ConsumptionRequest) returns (stream message.Energy);
}
