syntax = "proto3";

package message;

import "message/common.proto";

option go_package = "github.com/afairon/smeter/message";

// Power message used to create and update
message Power {
    int64 Time = 1;
    int64 SensorID = 2;
    double Value = 3;
}

// Energy message used to create and update
message Energy {
    int64 Time = 1;
    int64 SensorID = 2;
    double Value = 3;
}

// Request for power
message PowerRequest {
    int64 SensorID = 1;
    int64 From = 2;
    int64 To = 3;
    int64 Limit = 4;
    int64 Offset = 5;
}

// Request for consumption
message ConsumptionRequest {
    int64 SensorID = 1;
    int64 From = 2;
    int64 To = 3;
    int64 Limit = 4;
    int64 Offset = 5;
    Bucket Bucket = 6;
}
